<resources>
    <string name="app_name">RestaurantQR</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="verify_otp">Please verify by giving phone number and entering OTP</string>
    <string name="enter_your_mobile_number">Enter your Mobile Number</string>
    <string name="country_code">+91</string>
    <string name="hint_phoneNo">9876543210</string>
    <string name="generate_otp">Generate Otp</string>
</resources>