<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="@color/backPage"
    tools:context=".PhoneNoVerify">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/sendImg"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="100dp"
            android:src="@drawable/send"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/otp_verification"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verify_otp"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_mobile_number"
            android:textSize="16sp"
            android:gravity="center"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textColor="@color/Blue"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/back1"
            android:orientation="horizontal"
            android:layout_marginRight="60dp"
            android:layout_marginLeft="60dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:textSize="16dp"
                android:text="@string/country_code"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <EditText
                android:id="@+id/phoneNo"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:background="@null"
                android:hint="@string/hint_phoneNo"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:textStyle="bold"
                />

        </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/generateBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/generate_otp"
                android:layout_margin="30dp"
                android:background="@drawable/back1"
                />
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:visibility="gone"/>
        </FrameLayout>

    </LinearLayout>


</ScrollView>